소나큐브 수정사항 몇개 적용